chore: /kill static adminshop